feat: transaction and stat handler
