# indexer-engine/internal/data/dto/status.go
@@ -1,0 +1,6 @@
+package dto
+
+type StatusOfBlock struct {
+	TotalAmount       string `json:"totalAmount,omitempty"`
+	TotalTransactions string `json:"totalTransactions,omitempty"`
+}
